--- a/app/posts/test-post-2/page.mdx
+++ b/app/posts/test-post-2/page.mdx
@@ -1,9 +1,9 @@
 ---
 slug: test-post-2
-title: Another test
+title: Yet anothee test
 description: This is a page
 published: 2024-01-25
-tags: [foo]
+keywords: [bar]
 ---
 
-More content
+Paragraph
