--- a/app/posts/test-post/page.mdx
+++ b/app/posts/test-post/page.mdx
@@ -3,7 +3,7 @@ slug: test-post
 title: Test page
 description: This is a page
 published: 2024-01-24
-tags: [foo, bar]
+keywords: [foo, bar]
 ---
 
 This is a test paragraph.
