--- a/app/posts/test-post/page.mdx
+++ b/app/posts/test-post/page.mdx
@@ -5,6 +5,7 @@ description: This is a page
 published: 2024-01-24
 keywords: [foo, bar]
 cover: cover.jpg
+coverAlt: A cat
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ex augue, malesuada sed nisl varius, aliquet pulvinar tellus. Morbi diam ligula, suscipit eget efficitur vel, auctor a nibh. Duis quis leo quis est commodo bibendum pretium a mi. Nulla rhoncus augue elit, non placerat nisl euismod vitae. In tempus vehicula sodales. Aliquam a ante id ligula aliquet feugiat id a dolor. Etiam id lorem dolor.
@@ -16,3 +17,19 @@ Sed mattis, nibh eget vehicula finibus, eros augue lacinia dolor, a malesuada or
 Quisque euismod mauris id lectus dapibus, nec blandit nulla ultrices. Duis tellus mauris, accumsan at consectetur ac, imperdiet ut metus. Nulla sollicitudin vel quam non ultrices. Quisque condimentum urna eu velit consectetur convallis. Curabitur eu varius enim. In a tristique ex. Nam sodales erat nec eros lacinia tristique. Integer eros sem, dignissim id nisl ut, lobortis tempus sem. Suspendisse potenti. Quisque at neque at lectus commodo tempor. Ut ut ultricies justo. Mauris sit amet arcu sed sem accumsan ultricies quis eget diam. Sed congue sollicitudin massa aliquet cursus.
 
 Aliquam at faucibus arcu. Vestibulum at elementum magna, eu dictum erat. Quisque fermentum tempus purus ut fringilla. Integer ac odio ac dui faucibus posuere a eu felis. Praesent ornare congue ante non lobortis. Pellentesque cursus eget dui vel sodales. Vivamus velit lacus, gravida sit amet scelerisque a, vestibulum id justo. Fusce commodo dui et viverra accumsan. Vestibulum vulputate, nibh in luctus rhoncus, est dui placerat velit, a faucibus lacus tellus quis neque. Nam id odio sed diam commodo interdum ac eget lorem. Nam congue quam at ligula interdum, et vestibulum est dapibus. Quisque id mauris tristique, fermentum tortor vel, imperdiet velit. Maecenas dapibus vitae libero sed dapibus. Mauris a porttitor mauris. Donec dignissim hendrerit augue tempor molestie. Nullam viverra est rutrum urna rhoncus, non feugiat erat facilisis.
+
+$$
+e = mc^2
+$$
+
+Sed mattis, nibh eget vehicula finibus, eros augue lacinia dolor, a malesuada orci risus at ante. Quisque at pulvinar magna, a ultricies diam. Quisque egestas venenatis dui. Donec eu nisl commodo, convallis ex nec, tempor massa. Vivamus vulputate urna vitae posuere porta. Duis egestas sem sed convallis vestibulum. Sed sit amet tempor leo. Proin varius vitae nunc eu pharetra. In sagittis dolor sed fringilla porta. Mauris nec elit at enim consequat suscipit a et mi. Sed posuere posuere arcu, vitae consectetur nisl elementum quis. Ut quis velit sapien.
+
+```rust {2}
+fn main() {
+    return true;
+}
+```
+
+Quisque euismod mauris id lectus dapibus, nec blandit nulla ultrices. Duis tellus mauris, accumsan at consectetur ac, imperdiet ut metus. Nulla sollicitudin vel quam non ultrices. Quisque condimentum urna eu velit consectetur convallis. Curabitur eu varius enim. In a tristique ex. Nam sodales erat nec eros lacinia tristique. Integer eros sem, dignissim id nisl ut, lobortis tempus sem. Suspendisse potenti. Quisque at neque at lectus commodo tempor. Ut ut ultricies justo. Mauris sit amet arcu sed sem accumsan ultricies quis eget diam. Sed congue sollicitudin massa aliquet cursus.
+
+Foo bar $a^2$ with `a`
