Improve code formatting

--- a/app/posts/test-post/page.mdx
+++ b/app/posts/test-post/page.mdx
@@ -22,11 +22,42 @@ $$
 e = mc^2
 $$
 
+# Heading
+
 Sed mattis, nibh eget vehicula finibus, eros augue lacinia dolor, a malesuada orci risus at ante. Quisque at pulvinar magna, a ultricies diam. Quisque egestas venenatis dui. Donec eu nisl commodo, convallis ex nec, tempor massa. Vivamus vulputate urna vitae posuere porta. Duis egestas sem sed convallis vestibulum. Sed sit amet tempor leo. Proin varius vitae nunc eu pharetra. In sagittis dolor sed fringilla porta. Mauris nec elit at enim consequat suscipit a et mi. Sed posuere posuere arcu, vitae consectetur nisl elementum quis. Ut quis velit sapien.
 
 ```rust {2}
 fn main() {
     return true;
+}
+```
+
+```javascript
+export default const Foo = 42;
+```
+
+```json
+{ "x": null }
+```
+
+```java caption='This is some code' {3-5}
+class Main {
+    public static void main(String[] args) {
+        1
+        1
+        1
+        1
+        1
+        1
+        1
+        1
+        1
+        1
+        1
+        1
+        1
+        1
+    }
 }
 ```
 
