Improve post info

--- a/app/posts/test-post/page.mdx
+++ b/app/posts/test-post/page.mdx
@@ -1,14 +1,15 @@
 ---
 slug: test-post
 title: This is a very long title that just keeps on going and going for ages
-description: This is a page
+description: This is a page with an outrageously long description that just keeps on going and going and really this is actually quite silly why is there all this text here I do not understand. Quisque euismod mauris id lectus dapibus, nec blandit nulla ultrices. Duis tellus mauris, accumsan at consectetur ac, imperdiet ut metus. Nulla sollicitudin vel quam non ultrices. Quisque condimentum urna eu velit consectetur convallis. Curabitur eu varius enim. In a tristique ex. Nam sodales erat nec eros lacinia tristique. Integer eros sem, dignissim id nisl ut, lobortis tempus sem. Suspendisse potenti. Quisque at neque at lectus commodo tempor. Ut ut ultricies justo. Mauris sit amet arcu sed sem accumsan ultricies quis eget diam. Sed congue sollicitudin massa aliquet cursus.
 published: 2024-01-24
+lastModified: 2024-02-24
 keywords: [java, compilers, syntax]
 cover: cover.jpg
 coverAlt: A cat
 ---
 
-# This heading is very very long indeed and it just keeps going 
+# This heading is very very long indeed and it just keeps going
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ex augue, malesuada sed nisl varius, aliquet pulvinar tellus. Morbi diam ligula, suscipit eget efficitur vel, auctor a nibh. Duis quis leo quis est commodo bibendum pretium a mi. Nulla rhoncus augue elit, non placerat nisl euismod vitae. In tempus vehicula sodales. Aliquam a ante id ligula aliquet feugiat id a dolor. Etiam id lorem dolor.
 
@@ -29,9 +30,13 @@ e = mc^2
 $$
 
 # Heading 1
+
 ## Heading 2
+
 ### Heading 3
+
 #### Heading 4
+
 ##### Heading 5
 
 Sed mattis, nibh eget vehicula finibus, eros augue lacinia dolor, a malesuada orci risus at ante. Quisque at pulvinar magna, a ultricies diam. Quisque egestas venenatis dui. Donec eu nisl commodo, convallis ex nec, tempor massa. Vivamus vulputate urna vitae posuere porta. Duis egestas sem sed convallis vestibulum. Sed sit amet tempor leo. Proin varius vitae nunc eu pharetra. In sagittis dolor sed fringilla porta. Mauris nec elit at enim consequat suscipit a et mi. Sed posuere posuere arcu, vitae consectetur nisl elementum quis. Ut quis velit sapien.
