Add embedded diagram support

--- a/app/posts/test-post-3/page.mdx
+++ b/app/posts/test-post-3/page.mdx
@@ -6,4 +6,12 @@ published: 2024-01-25
 keywords: [foo]
 ---
 
-More content
+This is some text
+
+```diagram
+digraph {
+    y -> b;
+}
+```
+
+This is another para
